exercises/bison/if-calculator/if.output
Terminais sem uso na gramática

    DIFF


Gramática

    0 $accept: progexec $end

    1 progexec: stmt
    2         | stmt progexec

    3 stmt_list: stmt
    4          | stmt_list stmt

    5 stmt: atrib SEMICOLON
    6     | expr SEMICOLON
    7     | if_stmt

    8 if_stmt: IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE
    9        | IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE ELSE L_CBRACE stmt_list R_CBRACE

   10 atrib: VARIABLE ATTRIB expr

   11 cond: expr GT factor
   12     | expr GTE factor
   13     | expr LT factor
   14     | expr LTE factor
   15     | expr EQUALS expr
   16     | L_PAREN cond AND cond R_PAREN
   17     | L_PAREN cond OR cond R_PAREN
   18     | L_PAREN NOT cond R_PAREN

   19 expr: expr PLUS factor
   20     | expr MINUS factor
   21     | expr TIMES factor
   22     | expr DIVIDE factor
   23     | L_PAREN expr R_PAREN
   24     | factor

   25 factor: VAL
   26       | MINUS VAL
   27       | VARIABLE


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    VAL <value> (258) 25 26
    VARIABLE <valueInt> (259) 10 27
    ATTRIB (260) 10
    IF (261) 8 9
    THEN (262) 8 9
    ELSE (263) 9
    L_PAREN (264) 8 9 16 17 18 23
    R_PAREN (265) 8 9 16 17 18 23
    L_CBRACE (266) 8 9
    R_CBRACE (267) 8 9
    GT (268) 11
    GTE (269) 12
    LT (270) 13
    LTE (271) 14
    DIFF (272)
    EQUALS (273) 15
    SEMICOLON (274) 5 6
    MINUS (275) 20 26
    PLUS (276) 19
    TIMES (277) 21
    DIVIDE (278) 22
    NEG (279)
    OR (280) 17
    AND (281) 16
    NOT (282) 18


Não terminais com as regras onde eles aparecem

    $accept (28)
        à esquerda: 0
    progexec (29)
        à esquerda: 1 2
        à direita: 0 2
    stmt_list <value> (30)
        à esquerda: 3 4
        à direita: 4 8 9
    stmt <value> (31)
        à esquerda: 5 6 7
        à direita: 1 2 3 4
    if_stmt (32)
        à esquerda: 8 9
        à direita: 7
    atrib (33)
        à esquerda: 10
        à direita: 5
    cond <condition> (34)
        à esquerda: 11 12 13 14 15 16 17 18
        à direita: 8 9 16 17 18
    expr <value> (35)
        à esquerda: 19 20 21 22 23 24
        à direita: 6 10 11 12 13 14 15 19 20 21 22 23
    factor <value> (36)
        à esquerda: 25 26 27
        à direita: 11 12 13 14 19 20 21 22 24


Estado 0

    0 $accept: • progexec $end

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 2
    IF        deslocar, e ir ao estado 3
    L_PAREN   deslocar, e ir ao estado 4
    MINUS     deslocar, e ir ao estado 5

    progexec  ir ao estado 6
    stmt      ir ao estado 7
    if_stmt   ir ao estado 8
    atrib     ir ao estado 9
    expr      ir ao estado 10
    factor    ir ao estado 11


Estado 1

   25 factor: VAL •

    $padrão  reduzir usando a regra 25 (factor)


Estado 2

   10 atrib: VARIABLE • ATTRIB expr
   27 factor: VARIABLE •

    ATTRIB  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 27 (factor)


Estado 3

    8 if_stmt: IF • L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE
    9        | IF • L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE ELSE L_CBRACE stmt_list R_CBRACE

    L_PAREN  deslocar, e ir ao estado 13


Estado 4

   23 expr: L_PAREN • expr R_PAREN

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    L_PAREN   deslocar, e ir ao estado 4
    MINUS     deslocar, e ir ao estado 5

    expr    ir ao estado 15
    factor  ir ao estado 11


Estado 5

   26 factor: MINUS • VAL

    VAL  deslocar, e ir ao estado 16


Estado 6

    0 $accept: progexec • $end

    $end  deslocar, e ir ao estado 17


Estado 7

    1 progexec: stmt •
    2         | stmt • progexec

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 2
    IF        deslocar, e ir ao estado 3
    L_PAREN   deslocar, e ir ao estado 4
    MINUS     deslocar, e ir ao estado 5

    $padrão  reduzir usando a regra 1 (progexec)

    progexec  ir ao estado 18
    stmt      ir ao estado 7
    if_stmt   ir ao estado 8
    atrib     ir ao estado 9
    expr      ir ao estado 10
    factor    ir ao estado 11


Estado 8

    7 stmt: if_stmt •

    $padrão  reduzir usando a regra 7 (stmt)


Estado 9

    5 stmt: atrib • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 19


Estado 10

    6 stmt: expr • SEMICOLON
   19 expr: expr • PLUS factor
   20     | expr • MINUS factor
   21     | expr • TIMES factor
   22     | expr • DIVIDE factor

    SEMICOLON  deslocar, e ir ao estado 20
    MINUS      deslocar, e ir ao estado 21
    PLUS       deslocar, e ir ao estado 22
    TIMES      deslocar, e ir ao estado 23
    DIVIDE     deslocar, e ir ao estado 24


Estado 11

   24 expr: factor •

    $padrão  reduzir usando a regra 24 (expr)


Estado 12

   10 atrib: VARIABLE ATTRIB • expr

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    L_PAREN   deslocar, e ir ao estado 4
    MINUS     deslocar, e ir ao estado 5

    expr    ir ao estado 25
    factor  ir ao estado 11


Estado 13

    8 if_stmt: IF L_PAREN • cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE
    9        | IF L_PAREN • cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE ELSE L_CBRACE stmt_list R_CBRACE

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    L_PAREN   deslocar, e ir ao estado 26
    MINUS     deslocar, e ir ao estado 5

    cond    ir ao estado 27
    expr    ir ao estado 28
    factor  ir ao estado 11


Estado 14

   27 factor: VARIABLE •

    $padrão  reduzir usando a regra 27 (factor)


Estado 15

   19 expr: expr • PLUS factor
   20     | expr • MINUS factor
   21     | expr • TIMES factor
   22     | expr • DIVIDE factor
   23     | L_PAREN expr • R_PAREN

    R_PAREN  deslocar, e ir ao estado 29
    MINUS    deslocar, e ir ao estado 21
    PLUS     deslocar, e ir ao estado 22
    TIMES    deslocar, e ir ao estado 23
    DIVIDE   deslocar, e ir ao estado 24


Estado 16

   26 factor: MINUS VAL •

    $padrão  reduzir usando a regra 26 (factor)


Estado 17

    0 $accept: progexec $end •

    $padrão  aceitar


Estado 18

    2 progexec: stmt progexec •

    $padrão  reduzir usando a regra 2 (progexec)


Estado 19

    5 stmt: atrib SEMICOLON •

    $padrão  reduzir usando a regra 5 (stmt)


Estado 20

    6 stmt: expr SEMICOLON •

    $padrão  reduzir usando a regra 6 (stmt)


Estado 21

   20 expr: expr MINUS • factor

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    MINUS     deslocar, e ir ao estado 5

    factor  ir ao estado 30


Estado 22

   19 expr: expr PLUS • factor

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    MINUS     deslocar, e ir ao estado 5

    factor  ir ao estado 31


Estado 23

   21 expr: expr TIMES • factor

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    MINUS     deslocar, e ir ao estado 5

    factor  ir ao estado 32


Estado 24

   22 expr: expr DIVIDE • factor

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    MINUS     deslocar, e ir ao estado 5

    factor  ir ao estado 33


Estado 25

   10 atrib: VARIABLE ATTRIB expr •
   19 expr: expr • PLUS factor
   20     | expr • MINUS factor
   21     | expr • TIMES factor
   22     | expr • DIVIDE factor

    MINUS   deslocar, e ir ao estado 21
    PLUS    deslocar, e ir ao estado 22
    TIMES   deslocar, e ir ao estado 23
    DIVIDE  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 10 (atrib)


Estado 26

   16 cond: L_PAREN • cond AND cond R_PAREN
   17     | L_PAREN • cond OR cond R_PAREN
   18     | L_PAREN • NOT cond R_PAREN
   23 expr: L_PAREN • expr R_PAREN

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    L_PAREN   deslocar, e ir ao estado 26
    MINUS     deslocar, e ir ao estado 5
    NOT       deslocar, e ir ao estado 34

    cond    ir ao estado 35
    expr    ir ao estado 36
    factor  ir ao estado 11


Estado 27

    8 if_stmt: IF L_PAREN cond • R_PAREN THEN L_CBRACE stmt_list R_CBRACE
    9        | IF L_PAREN cond • R_PAREN THEN L_CBRACE stmt_list R_CBRACE ELSE L_CBRACE stmt_list R_CBRACE

    R_PAREN  deslocar, e ir ao estado 37


Estado 28

   11 cond: expr • GT factor
   12     | expr • GTE factor
   13     | expr • LT factor
   14     | expr • LTE factor
   15     | expr • EQUALS expr
   19 expr: expr • PLUS factor
   20     | expr • MINUS factor
   21     | expr • TIMES factor
   22     | expr • DIVIDE factor

    GT      deslocar, e ir ao estado 38
    GTE     deslocar, e ir ao estado 39
    LT      deslocar, e ir ao estado 40
    LTE     deslocar, e ir ao estado 41
    EQUALS  deslocar, e ir ao estado 42
    MINUS   deslocar, e ir ao estado 21
    PLUS    deslocar, e ir ao estado 22
    TIMES   deslocar, e ir ao estado 23
    DIVIDE  deslocar, e ir ao estado 24


Estado 29

   23 expr: L_PAREN expr R_PAREN •

    $padrão  reduzir usando a regra 23 (expr)


Estado 30

   20 expr: expr MINUS factor •

    $padrão  reduzir usando a regra 20 (expr)


Estado 31

   19 expr: expr PLUS factor •

    $padrão  reduzir usando a regra 19 (expr)


Estado 32

   21 expr: expr TIMES factor •

    $padrão  reduzir usando a regra 21 (expr)


Estado 33

   22 expr: expr DIVIDE factor •

    $padrão  reduzir usando a regra 22 (expr)


Estado 34

   18 cond: L_PAREN NOT • cond R_PAREN

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    L_PAREN   deslocar, e ir ao estado 26
    MINUS     deslocar, e ir ao estado 5

    cond    ir ao estado 43
    expr    ir ao estado 28
    factor  ir ao estado 11


Estado 35

   16 cond: L_PAREN cond • AND cond R_PAREN
   17     | L_PAREN cond • OR cond R_PAREN

    OR   deslocar, e ir ao estado 44
    AND  deslocar, e ir ao estado 45


Estado 36

   11 cond: expr • GT factor
   12     | expr • GTE factor
   13     | expr • LT factor
   14     | expr • LTE factor
   15     | expr • EQUALS expr
   19 expr: expr • PLUS factor
   20     | expr • MINUS factor
   21     | expr • TIMES factor
   22     | expr • DIVIDE factor
   23     | L_PAREN expr • R_PAREN

    R_PAREN  deslocar, e ir ao estado 29
    GT       deslocar, e ir ao estado 38
    GTE      deslocar, e ir ao estado 39
    LT       deslocar, e ir ao estado 40
    LTE      deslocar, e ir ao estado 41
    EQUALS   deslocar, e ir ao estado 42
    MINUS    deslocar, e ir ao estado 21
    PLUS     deslocar, e ir ao estado 22
    TIMES    deslocar, e ir ao estado 23
    DIVIDE   deslocar, e ir ao estado 24


Estado 37

    8 if_stmt: IF L_PAREN cond R_PAREN • THEN L_CBRACE stmt_list R_CBRACE
    9        | IF L_PAREN cond R_PAREN • THEN L_CBRACE stmt_list R_CBRACE ELSE L_CBRACE stmt_list R_CBRACE

    THEN  deslocar, e ir ao estado 46


Estado 38

   11 cond: expr GT • factor

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    MINUS     deslocar, e ir ao estado 5

    factor  ir ao estado 47


Estado 39

   12 cond: expr GTE • factor

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    MINUS     deslocar, e ir ao estado 5

    factor  ir ao estado 48


Estado 40

   13 cond: expr LT • factor

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    MINUS     deslocar, e ir ao estado 5

    factor  ir ao estado 49


Estado 41

   14 cond: expr LTE • factor

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    MINUS     deslocar, e ir ao estado 5

    factor  ir ao estado 50


Estado 42

   15 cond: expr EQUALS • expr

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    L_PAREN   deslocar, e ir ao estado 4
    MINUS     deslocar, e ir ao estado 5

    expr    ir ao estado 51
    factor  ir ao estado 11


Estado 43

   18 cond: L_PAREN NOT cond • R_PAREN

    R_PAREN  deslocar, e ir ao estado 52


Estado 44

   17 cond: L_PAREN cond OR • cond R_PAREN

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    L_PAREN   deslocar, e ir ao estado 26
    MINUS     deslocar, e ir ao estado 5

    cond    ir ao estado 53
    expr    ir ao estado 28
    factor  ir ao estado 11


Estado 45

   16 cond: L_PAREN cond AND • cond R_PAREN

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 14
    L_PAREN   deslocar, e ir ao estado 26
    MINUS     deslocar, e ir ao estado 5

    cond    ir ao estado 54
    expr    ir ao estado 28
    factor  ir ao estado 11


Estado 46

    8 if_stmt: IF L_PAREN cond R_PAREN THEN • L_CBRACE stmt_list R_CBRACE
    9        | IF L_PAREN cond R_PAREN THEN • L_CBRACE stmt_list R_CBRACE ELSE L_CBRACE stmt_list R_CBRACE

    L_CBRACE  deslocar, e ir ao estado 55


Estado 47

   11 cond: expr GT factor •

    $padrão  reduzir usando a regra 11 (cond)


Estado 48

   12 cond: expr GTE factor •

    $padrão  reduzir usando a regra 12 (cond)


Estado 49

   13 cond: expr LT factor •

    $padrão  reduzir usando a regra 13 (cond)


Estado 50

   14 cond: expr LTE factor •

    $padrão  reduzir usando a regra 14 (cond)


Estado 51

   15 cond: expr EQUALS expr •
   19 expr: expr • PLUS factor
   20     | expr • MINUS factor
   21     | expr • TIMES factor
   22     | expr • DIVIDE factor

    MINUS   deslocar, e ir ao estado 21
    PLUS    deslocar, e ir ao estado 22
    TIMES   deslocar, e ir ao estado 23
    DIVIDE  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 15 (cond)


Estado 52

   18 cond: L_PAREN NOT cond R_PAREN •

    $padrão  reduzir usando a regra 18 (cond)


Estado 53

   17 cond: L_PAREN cond OR cond • R_PAREN

    R_PAREN  deslocar, e ir ao estado 56


Estado 54

   16 cond: L_PAREN cond AND cond • R_PAREN

    R_PAREN  deslocar, e ir ao estado 57


Estado 55

    8 if_stmt: IF L_PAREN cond R_PAREN THEN L_CBRACE • stmt_list R_CBRACE
    9        | IF L_PAREN cond R_PAREN THEN L_CBRACE • stmt_list R_CBRACE ELSE L_CBRACE stmt_list R_CBRACE

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 2
    IF        deslocar, e ir ao estado 3
    L_PAREN   deslocar, e ir ao estado 4
    MINUS     deslocar, e ir ao estado 5

    stmt_list  ir ao estado 58
    stmt       ir ao estado 59
    if_stmt    ir ao estado 8
    atrib      ir ao estado 9
    expr       ir ao estado 10
    factor     ir ao estado 11


Estado 56

   17 cond: L_PAREN cond OR cond R_PAREN •

    $padrão  reduzir usando a regra 17 (cond)


Estado 57

   16 cond: L_PAREN cond AND cond R_PAREN •

    $padrão  reduzir usando a regra 16 (cond)


Estado 58

    4 stmt_list: stmt_list • stmt
    8 if_stmt: IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list • R_CBRACE
    9        | IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list • R_CBRACE ELSE L_CBRACE stmt_list R_CBRACE

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 2
    IF        deslocar, e ir ao estado 3
    L_PAREN   deslocar, e ir ao estado 4
    R_CBRACE  deslocar, e ir ao estado 60
    MINUS     deslocar, e ir ao estado 5

    stmt     ir ao estado 61
    if_stmt  ir ao estado 8
    atrib    ir ao estado 9
    expr     ir ao estado 10
    factor   ir ao estado 11


Estado 59

    3 stmt_list: stmt •

    $padrão  reduzir usando a regra 3 (stmt_list)


Estado 60

    8 if_stmt: IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE •
    9        | IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE • ELSE L_CBRACE stmt_list R_CBRACE

    ELSE  deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 8 (if_stmt)


Estado 61

    4 stmt_list: stmt_list stmt •

    $padrão  reduzir usando a regra 4 (stmt_list)


Estado 62

    9 if_stmt: IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE ELSE • L_CBRACE stmt_list R_CBRACE

    L_CBRACE  deslocar, e ir ao estado 63


Estado 63

    9 if_stmt: IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE ELSE L_CBRACE • stmt_list R_CBRACE

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 2
    IF        deslocar, e ir ao estado 3
    L_PAREN   deslocar, e ir ao estado 4
    MINUS     deslocar, e ir ao estado 5

    stmt_list  ir ao estado 64
    stmt       ir ao estado 59
    if_stmt    ir ao estado 8
    atrib      ir ao estado 9
    expr       ir ao estado 10
    factor     ir ao estado 11


Estado 64

    4 stmt_list: stmt_list • stmt
    9 if_stmt: IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE ELSE L_CBRACE stmt_list • R_CBRACE

    VAL       deslocar, e ir ao estado 1
    VARIABLE  deslocar, e ir ao estado 2
    IF        deslocar, e ir ao estado 3
    L_PAREN   deslocar, e ir ao estado 4
    R_CBRACE  deslocar, e ir ao estado 65
    MINUS     deslocar, e ir ao estado 5

    stmt     ir ao estado 61
    if_stmt  ir ao estado 8
    atrib    ir ao estado 9
    expr     ir ao estado 10
    factor   ir ao estado 11


Estado 65

    9 if_stmt: IF L_PAREN cond R_PAREN THEN L_CBRACE stmt_list R_CBRACE ELSE L_CBRACE stmt_list R_CBRACE •

    $padrão  reduzir usando a regra 9 (if_stmt)
